--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "inbounds": [
     {
       "port": 80,
+      "listen": "0.0.0.0",
       "protocol": "vless",
       "settings": {
         "clients": [
